Upload image from image finder
