# Trustify.Frontend/src/app/api/features/models.ts
@@ -3,3 +3,4 @@ export { SectionDTO } from './models/section-dto';
 export { SectionWrapper } from './models/section-wrapper';
 export { TextualContentDTO } from './models/textual-content-dto';
 export { TextualContentWrapper } from './models/textual-content-wrapper';
+export { UserRolesWrapper } from './models/user-roles-wrapper';
