# Trustify.Frontend/src/app/api/features/models/user-roles-wrapper.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+export interface UserRolesWrapper {
+  roles?: null | Array<string>;
+}
